# glyphjet

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.build/: ARCHITECTURE.md  PRODUCT.md  ROADMAP.md  STRUCTURE.md
.build/specs/: spec1-core-launcher-shell.md
.github/workflows/: ci.yml
scripts/: bench-search.mjs  build_taxonomy.py  sync_data.py
src/: clipboard-bridge.ts  data.json  data.ts  keyboard-navigation.ts  main.ts  search.ts  settings-bridge.ts  state.ts  styles.css  taxonomy.json  taxonomy.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  commands.rs  hotkey.rs  lib.rs  main.rs  settings.rs  tray.rs  window.rs
src/ui/: chip-bar.ts  empty.ts  grid.ts  search-bar.ts  search-results.ts  tab-bar.ts
tests/: browse.test.ts  search.test.ts  state.test.ts  taxonomy.test.ts
